Update form add survey. Need to do more.

--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -65,13 +65,13 @@
             <span class="menu-header-text">Admin</span>
         </li>
         <li class="menu-item">
-            <a href="/Admin/Survey/Create3" class="menu-link menu-toggle">
+            <a href="/Admin/Survey/AddSurvey" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-crown"></i>
                 <div data-i18n="Boxicons">Quản lý Survey</div>
             </a>
             <ul class="menu-sub">
                 <li class="menu-item">
-                    <a href="/Admin/Survey/Create3" class="menu-link">
+                    <a href="/Admin/Survey/AddSurvey" class="menu-link">
                         <div data-i18n="Account">Tạo mới Survey</div>
                     </a>
                 </li>
