--- a/SurveyEducation/Areas/Admin/Views/Survey/Create3.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create3.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Basic information</h4>
     <div class="row">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills m-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Add new survey</button>
             </li>
@@ -14,13 +14,13 @@
                 <div class="row">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="false"> Create a question</button>
+                            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="false"> Thông tin cơ bản</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true"> List question</button>
+                            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true"> Danh sách câu hỏi</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false"> Enter your information</button>
+                            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false"> Thông tin thêm</button>
                         </li>
                     </ul>
                     <div class="tab-content  bg-light" id="myTabContent">
@@ -28,28 +28,24 @@
                             <form>
                                 <div class="col-12 col-mb-8">
                                     <div class="row m-2 basic-survey">
-                                        <div class="col-2"> <label class="form-label" for="basic-default-fullname">Survey Name </label></div>
-                                        <div class="col-5"> <input type="text" name="survey-name" class="form-control" id="basic-default-surveyname" placeholder="SurveyName" /></div>
+                                        <div class="col-2"> <label class="form-label" for="basic-default-fullname">Tên</label></div>
+                                        <div class="col-6"> <input type="text" name="survey-name" class="form-control" id="basic-default-surveyname" placeholder="SurveyName" /></div>
+                                    </div>
+                                    <div class="row m-2 basic-survey">
+                                        <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian bắt đầu</label></div>
+                                        <div class="col-4"><input type="date" name="start-time" class="form-control" id="basic-default-company" placeholder="Start Time" /></div>
+                                    </div>
+                                    <div class="row m-2 basic-survey">
+                                        <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian kết thúc</label></div>
+                                        <div class="col-4"><input type="date" name="end-time" class="form-control" id="basic-default-company" placeholder="End Time" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey" ">
-                                        <div class="col-2"><label class="form-label" for="basic-default-company">Start Time</label></div>
-                                        <div class="col-5"><input type="date" name="start-time" class="form-control" id="basic-default-company" placeholder="Start Time" /></div>
-                                    </div>
-                                    <div class="row m-2 basic-survey" ">
-                                        <div class="col-2"><label class="form-label" for="basic-default-company">End Time</label></div>
-                                        <div class="col-5"><input type="date" name="end-time" class="form-control" id="basic-default-company" placeholder="End Time" /></div>
-                                    </div>
-                                    <div class="row m-2 basic-survey" ">
-                                        <div class="col-2"><label class="form-label" for="basic-default-company">Created By</label></div>
-                                        <div class="col-5"><input type="text" name="creator" class="form-control" id="basic-default-company" placeholder="Created By" /></div>
-                                    </div>
-                                    <div class="row m-2 basic-survey" ">
-                                        <div class="col-2"><label class="form-label" for="basic-default-company">Description</label></div>
-                                        <div class="col-5"><textarea name="description" class="form-control" id="basic-default-company" placeholder="Description"></textarea></div>
+                                        <div class="col-2"><label class="form-label" for="basic-default-company">Mô tả</label></div>
+                                        <div class="col-10"><textarea name="description" class="form-control" id="basic-default-company" placeholder="Description"></textarea></div>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end">
-                                    <button type="submit" id="btnSubmitBasicSurvey" class="btn btn-primary col-1 mt-4">Next</button>
+                                    <button type="submit" id="btnSubmitBasicSurvey" class="btn btn-primary col-1 mt-4">Tiếp theo</button>
                                     <h1 id="demo"></h1>
                                 </div>
                             </form>
